// 版本声明，使用Protocol Buffers v3版本
syntax = "proto3";

// 包名
package pb;

option php_namespace = "Client";
option php_metadata_namespace = "Client";


// 定义服务
service Greeter {
    // SayHello 方法
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

// 请求消息
message HelloRequest {
    string name = 1;
}

// 响应消息
message HelloResponse {
    string reply = 1;
}
